# beacon-chain

./: .gitignore  .travis-bazelrc  .travis.yml  BUILD.bazel  README.md  WORKSPACE  check_gazelle.sh  config.go  main.go
common/: BUILD.bazel  address.go  address_test.go  bytes.go  bytes_test.go  hash.go  hash_test.go  size.go  size_test.go  types.go
common/hexutil/: BUILD.bazel  hexutil.go  hexutil_test.go  json.go  json_test.go
contracts/: BUILD.bazel  validator_registration.sol  validator_registration_test.go
helper/: BUILD.bazel  utils.go
node/: BUILD.bazel  backend.go  backend_test.go
types/: BUILD.bazel  block.go  interfaces.go  state.go
