load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/prysmaticlabs/beacon-chain
gazelle(
    name = "gazelle",
    prefix = "github.com/prysmaticlabs/beacon-chain",
)

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/prysmaticlabs/beacon-chain",
    visibility = ["//visibility:public"],
    deps = [
        "//node:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)

go_binary(
    name = "beacon-chain",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
