load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "address.go",
        "bytes.go",
        "hash.go",
        "size.go",
    ],
    importpath = "github.com/prysmaticlabs/beacon-chain/common",
    visibility = ["//visibility:public"],
    deps = [
        "//common/hexutil:go_default_library",
        "@org_golang_x_crypto//sha3:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "address_test.go",
        "bytes_test.go",
        "hash_test.go",
        "size_test.go",
    ],
    embed = [":go_default_library"],
)
