load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["backend.go"],
    importpath = "github.com/prysmaticlabs/beacon-chain/node",
    visibility = ["//visibility:public"],
    deps = [
        "//types:go_default_library",
        "@com_github_ethereum_go_ethereum//log:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
